--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
 #theme: layouts/default
+title: [Yuto Minami's Web Page]
+description: [A web page to introduce my studies]
 theme: jekyll-theme-minimal
